fix z-index && add min-hight to links-container

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -56,7 +56,8 @@ a {
       left: -250px;
       top: 60px;
       width: 250px;
-      z-index: 3;
+      min-height: 273px;
+      z-index: 10;
     }
     &.open {
       left: 0;
@@ -182,6 +183,7 @@ header {
   min-height: 600px;
   background-image: url("../imgs/Header.jpg");
   position: relative;
+  z-index: 1;
 
   .overlay {
     position: absolute;
@@ -190,6 +192,7 @@ header {
     width: 100%;
     height: 100%;
     background-color: rgba($color: #000000, $alpha: 0.3);
+    z-index: 1;
   }
 
   .header-info {
@@ -199,6 +202,7 @@ header {
     transform: translate(-50%, -50%);
     text-align: center;
     color: #fff;
+    z-index: 2;
 
     span {
       font-size: 18px;
